finish create group's api
